fixed description font size on mobile

--- a/src/styles/anime.scss
+++ b/src/styles/anime.scss
@@ -96,6 +96,10 @@ $data-width: 230px;
     margin: auto;
     width: 100%;
 
+    p {
+      font-size: 15px;
+    }
+
     #margin {
       margin-bottom: 120px;
     }
